<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="innovation_banner_result_small">ca-app-pub-9751397320629924/6181380877</string>
    <string name="innovation_banner_result_large">ca-app-pub-9751397320629924/8648596262</string>
    <string name="innovation_banner_review_small">ca-app-pub-9751397320629924/6022432925</string>
    <string name="innovation_banner_review_large">ca-app-pub-9751397320629924/2083187915</string>
    <string name="innovation_banner_create_large">ca-app-pub-1338847113684939/8942247916</string>
    <string name="innovation_banner_create_small">ca-app-pub-1338847113684939/8287641793</string>
    <string name="innovation_banner_backup_small">ca-app-pub-1338847113684939/2899583744</string>
    <string name="innovation_banner_backup_large">ca-app-pub-1338847113684939/7960338733</string>
    <string name="innovation_banner_change_color_small">ca-app-pub-1338847113684939/3689921234</string>
    <string name="innovation_banner_change_color_large">ca-app-pub-1338847113684939/2017731008</string>
    <string name="innovation_banner_help_feedback_small">ca-app-pub-1338847113684939/4021093724</string>
    <string name="innovation_banner_help_feedback_large">ca-app-pub-1338847113684939/9704649337</string>
    <string name="innovation_interstitial_anywhere">ca-app-pub-1338847113684939/5111083616</string>
    <string name="innovation_interstitial_view_code">ca-app-pub-1338847113684939/1394930385</string>
    <string name="admob_app_id">ca-app-pub-9751397320629924~6876333687</string>
    <string name="banner_result_small">ca-app-pub-9751397320629924/9770106246</string>
    <string name="banner_result_large">ca-app-pub-9751397320629924/5743231325</string>
    <string name="banner_review_small">ca-app-pub-9751397320629924/6863088912</string>
    <string name="banner_review_large">ca-app-pub-9751397320629924/8457024578</string>
    <string name="banner_create_small">ca-app-pub-1338847113684939/4974765511</string>
    <string name="banner_create_large">ca-app-pub-1338847113684939/3122643703</string>
    <string name="banner_backup_small">ca-app-pub-1338847113684939/9524670023</string>
    <string name="banner_backup_large">ca-app-pub-1338847113684939/1809562036</string>
    <string name="banner_change_color_small">ca-app-pub-1338847113684939/8969850841</string>
    <string name="banner_change_color_large">ca-app-pub-1338847113684939/5369802596</string>
    <string name="banner_help_feedback_small">ca-app-pub-1338847113684939/6898506683</string>
    <string name="banner_help_feedback_large">ca-app-pub-1338847113684939/9795863261</string>
    <string name="interstitial_anywhere">ca-app-pub-1338847113684939/7656769170</string>
    <string name="interstitial_view_code">ca-app-pub-1338847113684939/2959261671</string>
    <string name="rewarded_change_design">ca-app-pub-6797409620142531/2204934194</string>
    <string name="interstitial_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_home_footer_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="reward_test">ca-app-pub-3940256099942544/5224354917</string>
    <string name="url_google">https://www.googleapis.com/</string>
    <string name="freedevelop">freedevelop</string>
    <string name="freerelease">freerelease</string>
    <string name="release">release</string>
    <string name="debug">debug</string>
    <string name="scanner_app">https://play.google.com/store/apps/details?id=tpcreative.co.qrscanner.free.release</string>
    <string name="scanner_app_free_innovation">https://play.google.com/store/apps/details?id=tpcreative.co.qrscanner.free.innovation</string>
    <string name="scanner_app_super_innovation">https://play.google.com/store/apps/details?id=com.superqrscanner.free.innovation</string>
    <string name="scanner_app_pro">https://play.google.com/store/apps/details?id=tpcreative.co.qrscanner</string>
    <string name="qr_now_app">https://play.google.com/store/apps/details?id=me.qrnow.qrscanner.free.release</string>
    <string name="url_developer">http://192.168.1.3:8082</string>
    <string name="url_live">http://tpcreative.me:8081</string>
    <string name="server_client_id">369444282152-hcourv8j2gd2pmqvf93l8nv5n0onlegm.apps.googleusercontent.com</string>
    <string name="key_google_maps">AIzaSyDGdrfAVeZEceHLWJH7v_2-9rVwHLgg8cw</string>
    <string name="youtubeid">eNhq6s1kmhw</string>
    <string name="tvPrimacyPolicy">https://sites.google.com/view/tpcreative/home</string>
    <string name="email_contact">care@tpcreative.me</string>
    <string name="access_token">Bearer %1$s</string>
    <string name="tpcreative">http://tpcreative.co</string>
    <string name="qrscanner_free_develop">tpcreative.co.qrscanner.free.develop</string>
    <string name="qrscanner_free_release">tpcreative.co.qrscanner.free.release</string>
    <string name="qrscanner_free_innovation">tpcreative.co.qrscanner.free.innovation</string>
    <string name="super_qrscanner_free_develop">com.superqrscanner.free.develop</string>
    <string name="super_qrscanner_free_release">com.superqrscanner.free.release</string>
    <string name="super_qrscanner_free_innovation">com.superqrscanner.free.innovation</string>
    <string name="one_years">tpcreative.co.qrscanner.free.release.one.year</string>
    <string name="lifetime">tpcreative.co.qrscanner.free.release.lifetime.v1</string>
    <string name="innovation_lifetime">tpcreative.co.qrscanner.free.innovation.lifetime.v1</string>
    <string name="qrscanner_pro_release">tpcreative.co.qrscanner</string>
    <string name="supersafe_live">co.tpcreative.supersafe</string>
    <string name="save_your_voicemails_live">co.tpcreative.saveyourvoicemails</string>
    <string name="id_parents">parents</string>
    <string name="id_appDataFolder">appDataFolder</string>
    <string name="key_device_id">device_id</string>
    <string name="key_device_type">device_type</string>
    <string name="key_manufacturer">manufacturer</string>
    <string name="key_name_model">name_model</string>
    <string name="key_version_sync">version</string>
    <string name="key_version_app">Version</string>
    <string name="key_versionRelease">versionRelease</string>
    <string name="key_appVersionRelease">appVersionRelease</string>
    <string name="key_pay">key_pay</string>
    <string name="key_code">key_code</string>
    <string name="key_verify_account">key_verify_account</string>
    <string name="key_super_safe_version">key_super_safe_version</string>
    <string name="key_locale">key_locale</string>
    <string name="key_scan">key_scan</string>
    <string name="key_basic_features">key_basic_features</string>
    <string name="key_advance_features">key_advance_features</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_beep">key_beep</string>
    <string name="key_dark_mode">key_dark_mode</string>
    <string name="key_pro_version">key_pro_version</string>
    <string name="key_dark_mode_detail">key_dark_mode_detail</string>
    <string name="key_theme_title">key_theme_title</string>
    <string name="key_color_code">key_color_code</string>
    <string name="key_change_theme">key_change_theme</string>
    <string name="key_color_code_detail">key_color_code_detail</string>
    <string name="key_size_code">Ckey_size_code</string>
    <string name="key_change_file_color">key_change_file_color</string>
    <string name="key_theme_object">key_theme_object</string>
    <string name="key_theme_list">key_theme_list</string>
    <string name="key_is_first_gallery">key_is_first_gallery</string>
    <string name="key_is_first_help">key_is_first_help</string>
    <string name="key_data">key_data</string>
    <string name="key_save_deleted_list">key_save_deleted_list</string>
    <string name="key_history_deleted_list">key_history_deleted_list</string>
    <string name="key_not_first_running">first_running</string>
    <string name="key_name">name</string>
    <string name="key_is_premium">key_is_premium</string>
    <string name="key_create_intent">create_intent</string>
    <string name="key_copy_to_clipboard">key_copy_to_clipboard</string>
    <string name="key_copy_to_clipboard_detail">key_copy_to_clipboard_detail</string>
    <string name="key_auto_navigate_to_browser">key_auto_navigate_to_browser</string>
    <string name="key_auto_navigate_to_browser_detail">key_auto_navigate_to_browser_detail</string>
    <string name="database_name">db-qr-scanner</string>
    <string name="key_waiting_for_show_ads">waiting_for_show_ads</string>
    <string name="key_multiple_scan">key_multiple_scan</string>
    <string name="key_scan_auto_complete">key_scan_auto_complete</string>
    <string name="key_multiple_scan_detail">key_multiple_scan_detail</string>
    <string name="key_skip_duplicates">key_skip_duplicates</string>
    <string name="key_skip_duplicates_detail">key_skip_duplicates_detail</string>
    <string name="key_backup_data">key_backup_data</string>
    <string name="key_content">Content</string>
    <string name="key_do_not_ask_again">key_do_not_ask_again</string>
    <string name="key_backup_data_detail">key_backup_data_detail</string>
    <string name="key_already_checkout">key_already_checkout</string>
    <string name="key_is_request_sync">key_is_request_sync</string>
    <string name="key_is_request_history_reload">key_is_request_history_reload</string>
    <string name="key_help">help</string>
    <string name="key_privacy_policy">privacy_policy</string>
    <string name="key_rate">rate</string>
    <string name="key_share">share</string>
    <string name="key_version">version</string>
    <string name="key_app_permissions">key_app_permissions</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="scan_barcode_with_request_code">Scan Barcode with customized request code</string>
    <string name="any_orientation">1D Any Orientation</string>
    <string name="front_camera">Front Camera</string>
    <string name="custom_activity">Continuous Scan</string>
    <string name="toolbar_activity">Activity with toolbar</string>
    <string name="custom_scanner">Custom Scanner Activity</string>
    <string name="scanner_with_margin">Scanner with margin</string>
    <string name="scanner_with_timeout">Finish Scan in 8 Seconds</string>
    <string name="tabs">Tabs</string>
    <string name="view_code">View code</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="csv">CSV</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="give_rate">Rate 5 stars</string>
    <string name="copy">Copy</string>
    <string name="info">Information</string>
    <string name="app_permission">App permissions</string>
    <string name="version">Version</string>
    <string name="barcode_guide">Barcode Scanner uses the camera on your phone to read barcodes and look up product information such as prices and reviews etc…</string>
    <string name="barcode_2d_guide">QRScanner also reads 2D barcode such as QR Codes ad Data Matrix. These can contain links to web numbers and email addresses, and more.</string>
    <string name="select">Select</string>
    <string name="print">Print</string>
    <string name="no_items_found">No Items Found</string>
    <string name="scan_code_via_Camera">Scan Barcode And QR Code Via the Camera.</string>
    <string name="scan_code_via_Gallery">Scan Barcode And QR Code From Gallery.</string>
    <string name="choose_files">Where the files are stored(Check item -> choose share icon).</string>
    <string name="choose_qrscanner_app">Choose QR Scanner app(select app -> waiting for great result ^^).</string>
    <string name="add_favorite">Add to favorites</string>
    <string name="notes">Notes</string>
    <string name="change_design">Change Design</string>
</resources>