<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"
        android:title="@string/delete"
        android:orderInCategory="100"/>
    <item
        android:id="@+id/menu_item_txt_export"
        android:icon="@drawable/ic_baseline_txt_export_32"
        app:showAsAction="always"
        android:title="@string/delete"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/menu_item_view_code"
        android:icon="@drawable/ic_baseline_qr_code_24"
        app:showAsAction="ifRoom"
        android:title="@string/view_code"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/menu_item_add_to_favorites"
        android:icon="@drawable/ic_baseline_favorite_white_24"
        app:showAsAction="ifRoom"
        android:title="@string/add_favorite"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/menu_item_notes"
        android:icon="@drawable/ic_baseline_edit_note_24"
        app:showAsAction="ifRoom"
        android:title="@string/notes"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/menu_item_copy"
        android:icon="@drawable/ic_copy"
        app:showAsAction="ifRoom"
        android:title="@string/copy"
        android:orderInCategory="100"/>
</menu>