<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tpcreative.co.qrscanner.ui.help.HelpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/rlButton"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/imgArrowBack"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:src="@drawable/baseline_arrow_back_ios_white_48" />

            <TextView
                android:id="@+id/tvTittle"
                style="@style/brandonBoldTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/help"
                android:textSize="20sp" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rlButton">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/brandonBoldTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/scan_code_via_Camera"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/medium_x" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/brandonRegularTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/barcode_guide" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/scan_example" />

                    <TextView
                        style="@style/brandonRegularTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/barcode_2d_guide" />
                </LinearLayout>

                <TextView
                    style="@style/brandonBoldTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/scan_code_via_Gallery"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/medium_x"/>


                <TextView
                    style="@style/brandonRegularTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/choose_files"
                    android:textColor="@color/white"/>

                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:layout_gravity="center"
                        android:scaleType="centerInside"
                        android:src="@drawable/step_1"
                        android:layout_width="400dp"
                        android:layout_height="400dp" />
                </LinearLayout>

                <TextView
                    style="@style/brandonRegularTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/choose_qrscanner_app"
                    android:textColor="@color/white"/>

                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:layout_gravity="center"
                        android:scaleType="centerInside"
                        android:src="@drawable/step_2"
                        android:layout_width="400dp"
                        android:layout_height="400dp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
