<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/flContainer_history_review"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <RelativeLayout
        android:layout_marginBottom="18dp"
        android:id="@+id/rlRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_margin="10dp"
            android:id="@+id/rlActionTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/rlCSV"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/rlSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    app:tint="?attr/colorAccent"
                    android:id="@+id/imgCSV"
                    app:srcCompat="@drawable/ic_baseline_subtitles_24"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/imgCSV"
                    android:text="@string/csv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlSelect"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    app:tint="?attr/colorAccent"
                    android:id="@+id/imgSelect"
                    app:srcCompat="@drawable/ic_baseline_select_all_24"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/imgSelect"
                    android:text="@string/select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </RelativeLayout>

        <com.jaychang.srv.SimpleRecyclerView
            android:layout_below="@+id/rlActionTop"
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srv_dividerColor="@null"
            app:srv_dividerOrientation="both"
            app:srv_dividerPaddingBottom="5dp"
            app:srv_dividerPaddingLeft="5dp"
            app:srv_dividerPaddingRight="5dp"
            app:srv_dividerPaddingTop="5dp"
            app:srv_layoutMode="linearVertical"
            app:srv_showDivider="false"
            app:srv_showLastDivider="false"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:visibility="invisible"
            android:id="@+id/tvNotFoundItems"
            style="@style/brandonBoldTextView"
            android:textSize="@dimen/medium"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/no_items_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
